# GENUS_EGG

./: .gitignore  CHANGELOG.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: tests.yml
docs/: FOUNDATION_REVIEW.md  GENUS_EGG_CONCEPT.md  GENUS_EGG_V0_SPEC.md  ROADMAP.md  SAFETY_BOUNDARIES.md  VERSIONING.md
src/genus_egg/: __init__.py  cli.py  time.py
src/genus_egg/activation/: __init__.py  activation_boundary.py  activation_decision.py  activation_request.py  reaction_spec_candidate.py  runtime_compatibility_check.py
src/genus_egg/cockpit/: __init__.py  cockpit_snapshot.py  data_adapter.py  html_renderer.py
src/genus_egg/development/: __init__.py  (+4 more)
tests/: test_activation_boundary.py  test_cli_activation.py  test_cli_development.py  test_cli_evidence.py  test_cli_git.py  test_cli_github.py  test_cli_growth.py  test_cli_guide.py  test_cli_habitat.py  test_cli_habitat_contract.py  test_cli_lifecycle.py  test_cli_maturation.py  test_cli_memory_indexing.py  test_cli_patch.py  test_cli_shadow_fitness.py  test_cli_version.py  test_command_parse_and_coordinates.py  test_development_boundaries.py  test_egg_1_0_e2e.py  test_evidence_chain.py  test_github_connector.py  test_guards.py  test_habitat_contract.py  test_habitat_manifest.py  test_inspection_cockpit.py  test_ledger.py  test_lifecycle_boundary.py  test_local_git_connector.py  test_maturation_seed.py  test_memory_indexing.py  test_reaction_graph.py  test_reaction_kernel.py  test_reaction_memory_flow.py  test_sandbox_patch_boundary.py  test_shadow_fitness.py  test_sqlite_store.py  test_validation.py
(+73 files in other folders)
