[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "genus-egg"
version = "0.0.2"
description = "SQLite-backed governed reaction kernel for GENUS EGG v0."
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "GENUS EGG" }]

[project.scripts]
genus-egg = "genus_egg.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=.pytest-tmp"
